   includes.
 * The contrib/scripts/ directory now has a script called sip_nat_settings that will
   give you the correct output for an asterisk box behind nat. It will give you the
   externhost and localnet settings.
 * The Asterisk core now supports ITU G.722.1 and G.722.1C media streams, and
   can connect calls in passthrough mode, as well as record and play back files.

Asterisk Manager Interface
--------------------------
 * When using the AMI over HTTP, you can now include a 'SuppressEvents' header (with
   a non-empty value) in your request. If you do this, any pending AMI events will
   *not* be included in the response to your request as they would normally, but
   will be left in the event queue for the next request you make to retrieve. For
   some applications, this will allow you to guarantee that you will only see
   events in responses to 'WaitEvent' actions, and can better know when to expect them.
   To know whether the Asterisk server supports this header or not, your client can
   inspect the first response back from the server to see if it includes this header:

   Pragma: SuppressEvents

   If this is included, the server supports event suppression.

 * Added 4 new Actions to list skinny device(s) and line(s)
   SKINNYdevices
   SKINNYshowdevice
   SKINNYlines
   SKINNYshowline

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.0 to Asterisk 1.6.1  -------------
------------------------------------------------------------------------------

Device State Handling
---------------------
 * The event infrastructure in Asterisk got another big update to help support
    distributed events.  It currently supports distributed device state and
    distributed Voicemail MWI (Message Waiting Indication).  A new module has
    been merged, res_ais, which facilitates communicating events between servers.
    It uses the SAForum AIS (Service Availability Forum Application Interface